# worms

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  bcl.hpp  check.hpp  options.hpp  plot_spacetime.py  worms.cpp  worms.op
.github/workflows/: build.yml
bcl/: condition.hpp  heatbath.hpp  markov.hpp  metropolis.hpp  observable.hpp  random_choice.hpp  random_shuffle.hpp  st2010.hpp  version.hpp
check/: diag.sh  plot.gp  worms.sh
cmake/: bcl.cmake  eigen3.cmake  googletest.cmake  lattice.cmake  postfix.cmake  prefix.cmake  standards.cmake
config/: FindBoostSrc.cmake
test/: CMakeLists.txt  outgoing_weight.cpp  weight.cpp
worms/: bond_operator.hpp  chain_lattice.hpp  heisenberg_operator.hpp  observable.hpp  operations.hpp  outgoing_weight.hpp  spacetime_point.hpp  spin_state.hpp  square_lattice.hpp  version.hpp  weight.hpp
